--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,43 @@
         </div>
     </section>
 
+    <section class="myself">
+        <div class="container">
+            <div class="myself__wrapper">
+                <div class="myself__photo"><img src="img/main_photo.jpg" alt="myself"></div>
+                <div class="myself__aboutme">
+                    <div class="myself__aboutme__title title_fz16">Про меня</div>
+                    <h2 class="myself__aboutme__name">Меня зовут Александра</h2>
+                    <div class="myself__aboutme__divider"></div>
+                    <div class="myself__aboutme__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </div>
+                </div>
+                <div class="myself__possibilities">
+                    <div class="myself__possibilities__wrapper">
+                        <div class="myself__possibilities__web">
+                            <div class="myself__possibilities__icon"><img src="icons/about_me/web_development.svg" alt="web"></div>
+                            <h3 class="myself__possibilities__title title title_fz14">Web-разработка</h3>
+                            <div class="myself__possibilities__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                        </div>
+                        <div class="myself__possibilities__apps">
+                            <div class="myself__possibilities__icon alignment"><img src="icons/about_me/mobile_dev.svg" alt="web"></div>
+                            <h3 class="myself__possibilities__title title title_fz14">Разработка приложений</h3>
+                            <div class="myself__possibilities__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                        </div>
+                        <div class="myself__possibilities__design">
+                            <div class="myself__possibilities__icon"><img src="icons/about_me/design.svg" alt="web"></div>
+                            <h3 class="myself__possibilities__title title title_fz14">UI/UX Design</h3>
+                            <div class="myself__possibilities__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
