--- a/src/index.html
+++ b/src/index.html
@@ -197,6 +197,92 @@
         </div>
     </section>
 
+    <section class="work">
+        <div class="container">
+        <h2 class="title title_fz16 resume__title work__title">Навыки</h2>
+        <div class="title title_fz36 resume__subtitle work__subtitle">Что я использую в работе</div>
+        <div class="divider"></div>
+        <div class="work__wrapper">
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/html5.svg" alt="html5"></div>
+                <div class="work__item-head">HTML5</div>
+                <div class="work__item-descr">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</div>
+            </div>
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/css3.svg" alt="css3"></div>
+                <div class="work__item-head">CSS3</div>
+                <div class="work__item-descr">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</div>
+            </div>
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/js.svg" alt="js"></div>
+                <div class="work__item-head">Java Script</div>
+                <div class="work__item-descr">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</div>
+            </div>
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/jquery.svg" alt="jquery"></div>
+                <div class="work__item-head">Jquery</div>
+                <div class="work__item-descr">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</div>
+            </div>
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/react.svg" alt="react"></div>
+                <div class="work__item-head">React</div>
+                <div class="work__item-descr">Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</div>
+            </div>
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/node.js.svg" alt="node.js"></div>
+                <div class="work__item-head">Node.js</div>
+                <div class="work__item-descr">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</div>
+            </div>
+            <div class="work__item">
+                <div class="work__item-icon"><img src="icons/skills/mongo.db.svg" alt="mongo.db"></div>
+                <div class="work__item-head">Mongo.db</div>
+                <div class="work__item-descr">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</div>
+            </div>
+        </div>
+
+        <div class="skills">
+            <div class="skills__wrapper">
+                <div class="skills__item">
+                    <div class="skills__item-head title title_fz14">Создание сайтов</div>
+                    <div class="skills__item-percents">100%</div>
+                    <div class="skills__item-linedown"></div>
+                    <div class="skills__item-lineup"><span></span></div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-head title title_fz14">Создание приложений</div>
+                    <div class="skills__item-percents">85%</div>
+                    <div class="skills__item-linedown"></div>
+                    <div class="skills__item-lineup"><span></span></div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-head title title_fz14">Работа с данными</div>
+                    <div class="skills__item-percents">90%</div>
+                    <div class="skills__item-linedown"></div>
+                    <div class="skills__item-lineup"><span></span></div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-head title title_fz14">Креативность</div>
+                    <div class="skills__item-percents">75%</div>
+                    <div class="skills__item-linedown"></div>
+                    <div class="skills__item-lineup"><span></span></div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-head title title_fz14">Создание дизайна</div>
+                    <div class="skills__item-percents">90%</div>
+                    <div class="skills__item-linedown"></div>
+                    <div class="skills__item-lineup"><span></span></div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-head title title_fz14">Soft skills</div>
+                    <div class="skills__item-percents">95%</div>
+                    <div class="skills__item-linedown"></div>
+                    <div class="skills__item-lineup"><span></span></div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
