--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,9 @@
 </head>
 <body>
     <aside class="sidepanel">
-        <a href="#" class="sidepanel__link"><img src="icons/social/facebook.svg" alt="facebook"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="#" class="sidepanel__link" target="_blank"><img src="icons/social/facebook.svg" alt="facebook"></a>
+        <a href="https://www.instagram.com/_flomaister_/" class="sidepanel__link" target="_blank"><img src="icons/social/instagram.svg" alt="instagram"></a>
+        <a href="https://github.com/FloMaister" target="_blank" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
@@ -65,9 +65,9 @@
                 </ul>
             </nav>
             <div class="menu__social">
-                <a href="#"><img src="icons/social/Github1.svg" alt="github"></a>
-                <a href="#"><img src="icons/social/Instagram1.svg" alt="instagram"></a>
-                <a href="#"><img src="icons/social/Facebook1.svg" alt="facebook"></a>
+                <a href="https://github.com/FloMaister" target="_blank"><img src="icons/social/Github1.svg" alt="github"></a>
+                <a href="https://www.instagram.com/_flomaister_/" target="_blank"><img src="icons/social/Instagram1.svg" alt="instagram"></a>
+                <a href="#" target="_blank"><img src="icons/social/Facebook1.svg" alt="facebook"></a>
             </div>
         </div>
         <div class="menu__overlay"></div>
@@ -97,7 +97,7 @@
                 <div class="myself__photo"><img src="img/main_photo.jpg" alt="myself"></div>
                 <div class="myself__aboutme">
                     <div class="myself__aboutme__title title_fz16">Про меня</div>
-                    <h2 class="myself__aboutme__name">Меня зовут Александра</h2>
+                    <h2 class="myself__aboutme__name title title_fz36">Меня зовут Александра</h2>
                     <div class="divider"></div>
                     <div class="myself__aboutme__descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
                     </div>
@@ -128,7 +128,7 @@
         </div>
     </section>
 
-    <section class="resume">
+    <!-- <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
             <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
@@ -195,9 +195,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="work">
+    <!-- <section class="work">
         <div class="container">
         <h2 class="title title_fz16 title__section-title">Навыки</h2>
         <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -281,9 +281,9 @@
             </div>
         </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="portfolio">
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
@@ -310,8 +310,9 @@
                 </a>
             </div>
         </div>
-    </section>
-    <section class="price">
+    </section> -->
+
+    <!-- <section class="price">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -349,9 +350,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -402,7 +403,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <script src="js/script.js"></script>
 </body>
