--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,8 @@
     <section class="myself">
         <div class="container">
             <div class="myself__wrapper">
-                <div class="myself__photo"><img src="img/main_photo.jpg" alt="myself"></div>
+                <div class="myself__photo">
+                    <img srcset="img/main_photo-min.jpg 300w, img/main_photo.jpg 400w" sizes="(max-width: 576px) 280px, (min-width: 577px) 400px" src="img/main_photo.jpg" alt="myself"></div>
                 <div class="myself__aboutme">
                     <div class="myself__aboutme__title title_fz16">Про меня</div>
                     <h2 class="myself__aboutme__name title title_fz36">Меня зовут Александра</h2>
@@ -283,7 +284,7 @@
         </div>
     </section>
 
-    <!-- <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
@@ -310,9 +311,9 @@
                 </a>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="price">
+    <section class="price">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -350,9 +351,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     
-    <!-- <section class="contacts">
+    <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -379,11 +380,11 @@
                     <div class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</div>
 
                     <form action="#" class="contacts__form">
-                        <div class="contacts__input">
+                        <div class="contacts__input contacts__input-name">
                             <input required name="name" id="name" type="text">
                             <label for="name">Ваше имя</label>
                         </div>
-                        <div class="contacts__input">
+                        <div class="contacts__input contacts__input-email">
                             <input required name="email" id="email" type="email">
                             <label for="email">Ваша почта</label>
                         </div>
@@ -403,7 +404,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <script src="js/script.js"></script>
 </body>
